[tool.poetry]
name = "flask_composer"
version = "0.0.1"
description = "A extension for flask"
authors = ["Kohaku-Blueleaf <59680068+KohakuBlueleaf@users.noreply.github.com>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
gevent = "^21.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
